Add new post on Google Assistant work profile bug

--- a/_sass/__base.scss
+++ b/_sass/__base.scss
@@ -44,6 +44,12 @@ GLOBAL Extra
 		margin-left: auto;
 		margin-right: auto;
 	}
+
+	video {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 /***************
