Update links to use HTTPS and remove dead links

--- a/_sass/__footer.scss
+++ b/_sass/__footer.scss
@@ -4,7 +4,7 @@ FOOTER STYLING
 footer {
 	padding: $padding 0;
 
-	//http://stackoverflow.com/a/31732902/1813592
+	//https://stackoverflow.com/a/31732902/1813592
 	.flex-list {
 	    position: relative;
 	    margin: 1em;
