Tweak overflow-wrap and reformat files

--- a/_sass/__base.scss
+++ b/_sass/__base.scss
@@ -2,15 +2,25 @@ body {
 	margin: 0;
 }
 
-body, p, li, ul, input, textarea {
-  font-size: 1em;
-  line-height: 1.58;
+body,
+p,
+li,
+ul,
+input,
+textarea {
+	font-size: 1em;
+	line-height: 1.58;
 	color: $black;
 	font-family: $sans-serif;
+	overflow-wrap: break-word;
 }
 
-img,video,audio,iframe,object {
-	max-width:100%;
+img,
+video,
+audio,
+iframe,
+object {
+	max-width: 100%;
 }
 
 main {
@@ -28,12 +38,12 @@ GLOBAL Extra
 }
 
 .clearfix:after {
-    content:"";
-    display:block;
-    clear:both;
+	content: "";
+	display: block;
+	clear: both;
 }
 
-.content{
+.content {
 	max-width: $content-width;
 	margin-right: auto;
 	margin-left: auto;
@@ -56,14 +66,15 @@ GLOBAL Extra
 LIST STYLING
 ***************/
 .no-list {
-	list-style:none;
-	padding-left:0;
-	margin-left:0;
+	list-style: none;
+	padding-left: 0;
+	margin-left: 0;
 }
 
 .left {
 	float: left;
 }
+
 .right {
 	float: right;
 }
@@ -88,6 +99,7 @@ POST LIST STYLING
 
 		a {
 			text-decoration: none;
+
 			&:hover {
 				text-decoration: underline;
 			}
