--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -8,7 +8,9 @@ BUTTON DEFAULTS
   border-radius: 4px;
   text-decoration: none;
   cursor: pointer;
-} // end .button
+}
+
+// end .button
 
 // Outline Button
 .button-outline {
