--- a/_sass/__header.scss
+++ b/_sass/__header.scss
@@ -18,13 +18,13 @@ HEADER STYLING
 
 	// Container with no padding for navbar
 	.nav-container {
-	  max-width: $navigation-width;
-	  margin: 0 auto;
+		max-width: $navigation-width;
+		margin: 0 auto;
 	}
 }
 
 /* Remove header image when screen width is too small */
-@media (min-width: $breakpoint-2){
+@media (min-width: $breakpoint-2) {
 	.header {
 		min-height: 10em;
 		position: relative;
@@ -33,19 +33,23 @@ HEADER STYLING
 }
 
 nav {
-	height: $nav-height; /* Menu height */
-	overflow: hidden; /* Don't show anything outside the nav */
+	height: $nav-height;
+	/* Menu height */
+	overflow: hidden;
+	/* Don't show anything outside the nav */
 }
 
 nav ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
-	max-height: $nav-height*2; /* Menu height x 2 */
-	position: relative; /* Position the menu button relative to this item */
-	.active
-	{
-			background: $nav-active;
+	max-height: $nav-height*2;
+	/* Menu height x 2 */
+	position: relative;
+
+	/* Position the menu button relative to this item */
+	.active {
+		background: $nav-active;
 	}
 }
 
@@ -60,8 +64,10 @@ nav a {
 	color: $nav-font-color;
 	text-decoration: none;
 	white-space: nowrap;
-	line-height: $nav-height; /* Menu height */
-	height: $nav-height; /* Menu height */
+	line-height: $nav-height;
+	/* Menu height */
+	height: $nav-height;
+	/* Menu height */
 }
 
 nav a:hover {
@@ -72,28 +78,36 @@ nav a:hover {
 nav li:first-child {
 	left: 0;
 	vertical-align: top;
-	font-size: 75%; /* Hide when screen width is too small */
+	font-size: 75%;
+
+	/* Hide when screen width is too small */
 	:hover {
 		color: $nav-font-color;
 		background-color: $nav-background;
 	}
-	@media (min-width: $breakpoint-0){
+
+	@media (min-width: $breakpoint-0) {
 		font-size: 100%;
 	}
-	@media (min-width: $breakpoint-1){
+
+	@media (min-width: $breakpoint-1) {
 		font-size: 140%;
 	}
 }
 
-nav li:last-child { /* The menu button */
-	position: absolute; /* Move the menu button out of flow */
+nav li:last-child {
+	/* The menu button */
+	position: absolute;
+	/* Move the menu button out of flow */
 	right: 0;
-	bottom: $nav-height; /* Move upwards, the same distance as the menu height */
+	bottom: $nav-height;
+	/* Move upwards, the same distance as the menu height */
 	background-image: linear-gradient(to right, $nav-background-transparent 0, $nav-background 2em);
 	padding-left: 3em;
 }
 
-nav li:nth-last-child(2) { /* The close button */
+nav li:nth-last-child(2) {
+	/* The close button */
 	display: none;
 }
 
@@ -117,6 +131,7 @@ nav#menu:target a {
 
 nav#menu:target li:not(:first-child) {
 	margin-top: 2px;
+
 	a:hover {
 		background-color: $link-hover-color;
 	}
