--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -3,9 +3,9 @@ TABLE STYLES
 ***************/
 
 .table-post {
-	border-collapse:collapse;
-	border-spacing:0;
-	border-color:#ccc;
+	border-collapse: collapse;
+	border-spacing: 0;
+	border-color: #ccc;
 	width: 100%;
 
 	tr {
@@ -13,33 +13,32 @@ TABLE STYLES
 	}
 
 	td {
-		font-size:14px;
-		padding:2px 5px;
-		border-style:solid;
-		border-width:1px;
-		overflow:hidden;
-		word-break:normal;
-		border-color:#ccc;
-		color:#333;
-		background-color:$white;
+		font-size: 14px;
+		padding: 2px 5px;
+		border-style: solid;
+		border-width: 1px;
+		overflow: hidden;
+		word-break: normal;
+		border-color: #ccc;
+		color: #333;
+		background-color: $white;
 
-		&:first-child
-		{
+		&:first-child {
 			font-weight: bold;
 			white-space: nowrap;
 		}
 	}
 
 	th {
-		font-size:14px;
+		font-size: 14px;
 		font-weight: bold;
-		padding:2px 5px;
-		border-style:solid;
-		border-width:1px;
-		overflow:hidden;
-		word-break:normal;
-		border-color:#ccc;
-		color:#333;
-		background-color:#f0f0f0
+		padding: 2px 5px;
+		border-style: solid;
+		border-width: 1px;
+		overflow: hidden;
+		word-break: normal;
+		border-color: #ccc;
+		color: #333;
+		background-color: #f0f0f0
 	}
 }
