--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -80,6 +80,35 @@ pre code {
 }
 
 /***************
+Anchor Heading Styling
+https://github.com/allejo/jekyll-anchor-headings/wiki/Examples
+***************/
+h1 .octicon,
+h2 .octicon,
+h3 .octicon,
+h4 .octicon,
+h5 .octicon,
+h6 .octicon {
+	visibility: hidden;
+}
+
+h1:hover .octicon,
+h2:hover .octicon,
+h3:hover .octicon,
+h4:hover .octicon,
+h5:hover .octicon,
+h6:hover .octicon {
+	visibility: visible;
+}
+
+.octicon {
+	fill: currentColor;
+	padding: 0;
+	// margin-left: -16px;
+	vertical-align: middle;
+}
+
+/***************
 TEXT SELECTION STYLING INVALID FOR NOW.
 ***************/
 // ::-moz-selection {
