Update all blog posts to include a 'Last Updated' header

--- a/_includes/amp/post.html
+++ b/_includes/amp/post.html
@@ -13,6 +13,10 @@
         {% endif %}
       </h3>
 
+      {% if page.updated %}
+      <h4 class="sub-meta">Updated on {{ page.updated | date: '%B %d, %Y' }}</h4>
+      {% endif %}  
+
       {% if page.image %}
       <div class="featuredImage">
         <img src="{{ page.image.path }}" alt="{{ page.alt }}" />
