--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: no-title
       {% if page.minute_read_override %}
       {{ page.minute_read_override }} Minute Read
       {% else %}
-      {{ page.content | strip_code_blocks | number_of_words | divided_by:200 | ceil }} Minute Read
+      {{ page.content | strip_code_blocks | strip_scripts | number_of_words | divided_by:200 | ceil }} Minute Read
       {% endif %} | {{ page.tag | capitalize }}</h3>
   </header>
 
