--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -1,3 +1,4 @@
+@use "sass:color";
 /***************
 TABLE STYLES
 ***************/
@@ -9,7 +10,7 @@ TABLE STYLES
 	width: 100%;
 
 	tr {
-		border-bottom: 1px solid lighten($dim-grey, 15%);
+		border-bottom: 1px solid color.adjust($dim-grey, $lightness: 15%);
 	}
 
 	td {
