Update deprecated SASS import rules

--- a/_includes/amp/amp.scss
+++ b/_includes/amp/amp.scss
@@ -1,8 +1,8 @@
-@import "fonts";
+@use "fonts";
 // /*  Site configuration */
-@import "_config";
+@use "_config";
 // /*  Import typography */
-@import "typography";
+@use "typography";
 // /*  Primary */
-@import "_base";
-@import "_header-amp";
+@use "_base";
+@use "_header-amp";
