--- a/_sass/__base.scss
+++ b/_sass/__base.scss
@@ -1,4 +1,5 @@
 @use "sass:color";
+@use "_config";
 
 body {
 	margin: 0;
@@ -12,8 +13,8 @@ input,
 textarea {
 	font-size: 1em;
 	line-height: 1.58;
-	color: $black;
-	font-family: $sans-serif;
+	color: config.$black;
+	font-family: config.$sans-serif;
 	overflow-wrap: break-word;
 }
 
@@ -34,9 +35,9 @@ GLOBAL Extra
 ***************/
 .line-separator {
 	height: 2px;
-	background: $light-grey;
-	margin-top: $padding;
-	margin-bottom: $padding;
+	background: config.$light-grey;
+	margin-top: config.$padding;
+	margin-bottom: config.$padding;
 }
 
 .clearfix:after {
@@ -46,10 +47,10 @@ GLOBAL Extra
 }
 
 .content {
-	max-width: $content-width;
+	max-width: config.$content-width;
 	margin-right: auto;
 	margin-left: auto;
-	padding: 0 $padding;
+	padding: 0 config.$padding;
 
 	img {
 		display: block;
@@ -108,7 +109,7 @@ POST LIST STYLING
 		}
 
 		.date {
-			color: $dim-grey;
+			color: config.$dim-grey;
 			font-size: .8em;
 		}
 	}
