--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,4 +1,6 @@
 @use "sass:color";
+@use "_config";
+
 /***************
 FORM STYLING
 ***************/
@@ -15,10 +17,10 @@ textarea {
 	padding: .5em;
 	outline: none;
 	border: none;
-	margin-bottom: $padding;
+	margin-bottom: config.$padding;
 
 	&:focus {
-		border: 1px solid $primary-color;
+		border: 1px solid config.$primary-color;
 	}
 
 	&.full-width {
@@ -28,21 +30,21 @@ textarea {
 }
 
 textarea {
-	height: $line-height*3;
+	height: config.$line-height*3;
 }
 
 form {
-	margin-bottom: $padding;
+	margin-bottom: config.$padding;
 
 	// Wrap each form input/element in a field div
 	.field {
-		margin-bottom: $padding;
+		margin-bottom: config.$padding;
 	}
 
 	// Notes go under the input fields
 	.note {
 		margin-top: 5px;
-		color: $dim-grey;
+		color: config.$dim-grey;
 	}
 
 	// Required label
@@ -56,13 +58,13 @@ form {
 		// Validation reason
 		.reason {
 			margin-top: 5px;
-			color: $bad-color;
+			color: config.$bad-color;
 		}
 
 		input[type=text],
 		input[type=email],
 		textarea {
-			border-color: $bad-color;
+			border-color: config.$bad-color;
 		}
 	}
 }
