--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -1,4 +1,6 @@
 @use "sass:color";
+@use "_config";
+
 /***************
 TABLE STYLES
 ***************/
@@ -10,7 +12,7 @@ TABLE STYLES
 	width: 100%;
 
 	tr {
-		border-bottom: 1px solid color.adjust($dim-grey, $lightness: 15%);
+		border-bottom: 1px solid color.adjust(config.$dim-grey, $lightness: 15%);
 	}
 
 	td {
@@ -22,7 +24,7 @@ TABLE STYLES
 		word-break: normal;
 		border-color: #ccc;
 		color: #333;
-		background-color: $white;
+		background-color: config.$white;
 
 		&:first-child {
 			font-weight: bold;
