--- a/assets/css/noncritical.scss
+++ b/assets/css/noncritical.scss
@@ -1,11 +1,11 @@
 ---
 ---
 
-@import "_config";
-@import "_footer";
+@use "_config";
+@use "_footer";
 /*  Secondary */
-@import "blog";
-@import "buttons";
-@import "tables";
-@import "syntax";
-@import "details";
+@use "blog";
+@use "buttons";
+@use "tables";
+@use "syntax";
+@use "details";
